--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -98,6 +98,16 @@
                           </div>
                         </div>
                       </div>
+
+                      <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                          <!-- LOAD FROM alerts.html file-->
+                          {% include 'includes/alerts.html' %}
+
+                        </div>
+                      </div>
+
                     </li>
                   </ul>
                 </form>
