--- a/templates/base.html
+++ b/templates/base.html
@@ -2,63 +2,56 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FoodOnline</title>
-    <!-- Google Font Family Link Start -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"
-    />
-    <!-- Google Font Family Link End -->
 
-    <!-- CSS -->
-    <link href="{% static 'css/iconmoon.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FoodOnline</title>
+  <!-- Google Font Family Link Start -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" />
+  <!-- Google Font Family Link End -->
 
-    <!-- JAVASCRIPT -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="{% static 'js/modernizr.js' %}"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+  <!-- CSS -->
+  <link href="{% static 'css/iconmoon.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet" />
 
-    <style>
-      body,
-      .main-section p,
-      .mce-content-body p {
-        font: Normal 14px/24px "Open Sans", sans-serif;
-        letter-spacing: 0px;
-        text-transform: none;
-        color: #515151 !important;
-      }
-    </style>
-  </head>
+  <!-- JAVASCRIPT -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="{% static 'js/modernizr.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
 
-  <body>
-    <!-- LOAD NAVBAR HERE...-->
-    {% include 'includes/navbar.html' %}
+  <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
 
-    <!-- LOAD CONTENT HERE-->
-    {% block content %}
+  <style>
+    body,
+    .main-section p,
+    .mce-content-body p {
+      font: Normal 14px/24px "Open Sans", sans-serif;
+      letter-spacing: 0px;
+      text-transform: none;
+      color: #515151 !important;
+    }
+  </style>
+</head>
 
-    <!-- Rest of the block content here-->
+<body>
+  <!-- LOAD NAVBAR HERE...-->
+  {% include 'includes/navbar.html' %}
 
-    {% endblock content %}
+  <!-- LOAD CONTENT HERE-->
+  {% block content %}
 
-    <!-- LOAD FOOTER HERE-->
-    {% include 'includes/footer.html' %}
-  </body>
+  <!-- Rest of the block content here-->
+
+  {% endblock content %}
+
+  <!-- LOAD FOOTER HERE-->
+  {% include 'includes/footer.html' %}
+</body>
+
 </html>
