--- a/templates/home.html
+++ b/templates/home.html
@@ -4,40 +4,33 @@
 <div class="main-section">
   <!-- Home Pages Elements Strat -->
   <!-- Main Search Start -->
-  <div
-    class="page-section nopadding cs-nomargin"
-    style="
+  <div class="page-section nopadding cs-nomargin" style="
       padding-top: 200px;
       padding-bottom: 150px;
       margin-bottom: 0px;
-      background: url(assets/extra-images/bg-image1.jpg) no-repeat center /
+      background: url( {% static 'extra-images/bg-image1.jpg' %} ) no-repeat center /
         cover;
-    "
-  >
+    ">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="element-title">
-            <h1
-              style="
+            <h1 style="
                 font-size: 40px;
                 color: #505050;
                 text-transform: uppercase;
                 line-height: 50px;
                 margin-bottom: 25px;
                 text-align: center;
-              "
-            >
+              ">
               We are in the business of food<br />our restaurants do
             </h1>
-            <p
-              style="
+            <p style="
                 font-size: 18px;
                 letter-spacing: 1px;
                 color: #505050;
                 text-align: center;
-              "
-            >
+              ">
               Ridiculus sociosqu cursus neque cursus curae ante scelerisque
               vehicula.
             </p>
@@ -56,50 +49,19 @@
                   <div class="field-holder">
                     <ul>
                       <li class="select-location">
-                        <div
-                          class="foodbakery-locations-fields-group foodbakery-focus-out"
-                        >
-                          <span class="foodbakery-search-location-icon"
-                            ><i class="icon-location"></i
-                          ></span>
-                          <span
-                            id="foodbakery_radius_location_open333"
-                            class="foodbakery-radius-location"
-                            ><i class="icon-target5"></i
-                          ></span>
-                          <input
-                            type="text"
-                            class="location-field-text filter"
-                            placeholder="All Locations"
-                          />
+                        <div class="foodbakery-locations-fields-group foodbakery-focus-out">
+                          <span class="foodbakery-search-location-icon"><i class="icon-location"></i></span>
+                          <span id="foodbakery_radius_location_open333" class="foodbakery-radius-location"><i
+                              class="icon-target5"></i></span>
+                          <input type="text" class="location-field-text filter" placeholder="All Locations" />
                         </div>
-                        <div
-                          class="select-location"
-                          id="foodbakery-radius-range333"
-                          style="display: none"
-                        >
+                        <div class="select-location" id="foodbakery-radius-range333" style="display: none">
                           <div class="select-popup popup-open">
-                            <a
-                              id="location_close_popup333"
-                              href="javascript:0;"
-                              class="location-close-popup"
-                            >
-                              <i class="icon-times"></i
-                            ></a>
-                            <input
-                              type="hidden"
-                              class="foodbakery-radius"
-                              name="foodbakery_radius"
-                              value="10"
-                            />
+                            <a id="location_close_popup333" href="javascript:0;" class="location-close-popup">
+                              <i class="icon-times"></i></a>
+                            <input type="hidden" class="foodbakery-radius" name="foodbakery_radius" value="10" />
                             <p>Show with in</p>
-                            <input
-                              id="ex16b333"
-                              type="text"
-                              data-value="10"
-                              value="10"
-                              style="display: none"
-                            />
+                            <input id="ex16b333" type="text" data-value="10" value="10" style="display: none" />
                             <script>
                               jQuery(document).ready(function () {
                                 var elem = jQuery("#ex16b333");
@@ -139,21 +101,12 @@
                                 );
                               });
                             </script>
-                            <span
-                              >Miles:
-                              <span id="ex16b333CurrentSliderValLabel"
-                                >10</span
-                              ></span
-                            ><br />
+                            <span>Miles:
+                              <span id="ex16b333CurrentSliderValLabel">10</span></span><br />
                             <p class="my-location">
                               of
-                              <i class="cs-color icon-location-arrow"></i
-                              ><a
-                                id="foodbakery-geo-location-all"
-                                class="cs-color foodbakery-geo-location313324"
-                                href="javascript:void(0)"
-                                >My location</a
-                              >
+                              <i class="cs-color icon-location-arrow"></i><a id="foodbakery-geo-location-all"
+                                class="cs-color foodbakery-geo-location313324" href="javascript:void(0)">My location</a>
                             </p>
                           </div>
                         </div>
@@ -176,16 +129,13 @@
   <!-- Main Search End -->
 
   <!-- Top Restarurants Section Start -->
-  <div
-    class="page-section nopadding cs-nomargin"
-    style="
+  <div class="page-section nopadding cs-nomargin" style="
       margin-top: 0px;
       padding-top: 60px;
       padding-bottom: 0px;
       margin-bottom: 0px;
       background: #ffffff;
-    "
-  >
+    ">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -194,87 +144,57 @@
             <p>Explore restaurants, bars, and cafés by locality</p>
           </div>
         </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+          style="padding-left: 0 !important; padding-right: 0 !important;">
           <div class="company-logo">
             <ul>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/listing-logo18.png"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/listing-logo18.png"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/fb-restaurant-02.jpg"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/fb-restaurant-02.jpg"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/fb-restaurant-04.jpg"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/fb-restaurant-04.jpg"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/fb-restaurant-06.jpg"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/fb-restaurant-06.jpg"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/xlisting-logo03.png.pagespeed.ic_.aT-o9LinEJ.png"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/xlisting-logo03.png.pagespeed.ic_.aT-o9LinEJ.png"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/listing-logo09.png"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/listing-logo09.png"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/listing-logo18.png"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/listing-logo18.png"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
               <li class="has-border">
                 <figure>
-                  <a href="#"
-                    ><img
-                      src="assets/extra-images/fb-restaurant-09.png"
-                      class="attachment-full size-full wp-post-image"
-                      alt=""
-                  /></a>
+                  <a href="#"><img src="assets/extra-images/fb-restaurant-09.png"
+                      class="attachment-full size-full wp-post-image" alt="" /></a>
                 </figure>
               </li>
             </ul>
@@ -285,16 +205,13 @@
   </div>
   <!-- Top Restarurants Section End -->
   <!-- Choose From Most Popular Listin Start -->
-  <div
-    class="page-section nopadding cs-nomargin"
-    style="
+  <div class="page-section nopadding cs-nomargin" style="
       margin-top: 0px;
       padding-top: 60px;
       padding-bottom: 50px;
       margin-bottom: 0px;
       background: #ffffff;
-    "
-  >
+    ">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -310,12 +227,8 @@
                 <div class="list-post featured">
                   <div class="img-holder">
                     <figure>
-                      <a href="#"
-                        ><img
-                          src="assets/extra-images/listing-logo18.png"
-                          class="img-thumb wp-post-image"
-                          alt=""
-                      /></a>
+                      <a href="#"><img src="assets/extra-images/listing-logo18.png" class="img-thumb wp-post-image"
+                          alt="" /></a>
                     </figure>
                     <span class="restaurant-status close">
                       <em class="bookmarkRibbon"></em>Close
@@ -343,12 +256,8 @@
                 <div class="list-post featured">
                   <div class="img-holder">
                     <figure>
-                      <a href="#"
-                        ><img
-                          src="assets/extra-images/listing-logo09.png"
-                          class="img-thumb wp-post-image"
-                          alt=""
-                      /></a>
+                      <a href="#"><img src="assets/extra-images/listing-logo09.png" class="img-thumb wp-post-image"
+                          alt="" /></a>
                     </figure>
                     <span class="restaurant-status open">
                       <em class="bookmarkRibbon"></em>open
