Added vendor registration functionalities

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -37,7 +37,7 @@
                 href="#user-register">Login / </a>
               <span> <a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0"> Register
                 </a>
-              </span> <a class="get-start-btn" href="register-restaurant.html">
+              </span> <a class="get-start-btn" href="{% url 'registerVendor' %}">
                 Register Restaurant
               </a>
             </div>
