--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -15,15 +15,16 @@
                     <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
                         <div class="user-holder">
                             <h4 class="text-center" style="margin-bottom: 0">
-                                SIGN IN
+                                Reset your password
                             </h4>
                             <p class="text-center">
-                                Order food from your favorite restaurents.
+                                Please provide a strong password for securing your account.
                             </p>
                             <hr />
                             <div id="restaurant-sets-holder">
-                                <form action="{% url 'login' %}" class="form-fields-set foodbakery-dev-restaurant-form"
-                                    method="post" enctype="multipart/form-data">
+                                <form action="{% url 'reset_password' %}"
+                                    class="form-fields-set foodbakery-dev-restaurant-form" method="post"
+                                    enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <ul
                                         class="register-add-restaurant-tab-container restaurant-information-tab-container">
@@ -34,16 +35,16 @@
 
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Email Address</label>
-                                                                <input type="email" name="email"
-                                                                    placeholder="Enter your Email address">
+                                                                <label>Password</label>
+                                                                <input type="password" name="password"
+                                                                    placeholder="Enter your a new password">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Password</label>
-                                                                <input type="password" name="password"
-                                                                    placeholder="Enter your password">
+                                                                <label>Confirm Password</label>
+                                                                <input type="password" name="confirm_password"
+                                                                    placeholder="Enter your password again">
                                                             </div>
                                                         </div>
 
@@ -57,10 +58,9 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Submit"
+                                                            <input type="submit" value="Reset Password"
                                                                 id="btn-next-restaurant-information" class="bgcolor" />
-                                                            <a href="{% url 'forgot_password' %}"
-                                                                class="float-right">Forgot Password</a>
+
                                                         </div>
                                                     </div>
                                                 </div>
